@@ -3,3 +3,4 @@ pkg
 rdoc
 test/active_record.log
 test/data_mapper.log
+test/sequel.log
